fix(crux): remove cert related code from Dockerfile

--- a/web/crux/Dockerfile
+++ b/web/crux/Dockerfile
@@ -26,12 +26,8 @@ COPY --from=BUILDER /app/package.json ./
 COPY --from=BUILDER /app/node_modules ./node_modules
 COPY --from=BUILDER /app/prisma ./prisma
 COPY --from=BUILDER /app/templates ./templates
-COPY ./crux-docker-entrypoint.sh ./cert-gen.sh ./install-docker.sh.hbr ./install-k8s.sh.hbr ./
+COPY ./crux-docker-entrypoint.sh ./install-docker.sh.hbr ./install-k8s.sh.hbr ./
 COPY ./proto ./proto
-
-RUN mkdir certs && \
-    chown node:node certs && \
-    chmod +x cert-gen.sh
 
 USER node
 
