test(crux-ui): add e2e tests to node screen

--- a/.github/workflows/web-crux-ui.yml
+++ b/.github/workflows/web-crux-ui.yml
@@ -73,6 +73,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Install curl
+        run: |
+          apt-get install -y curl
+
       - name: Setup containers
         working-directory: web/crux-ui
         run: |
