chore: correct default registry

--- a/golang/cmd/crane/.env.example
+++ b/golang/cmd/crane/.env.example
@@ -11,6 +11,7 @@ INGRESS_ROOT_DOMAIN=
 READ_HEADER_TIMEOUT=15s
 SECRET_PRIVATE_KEY_FILE=/path/to/secret.key
 DEBUG=true
+DEFAULT_REGISTRY=index.docker.io
 
 # crane specific options
 CRANE_GEN_TCP_INGRESS_MAP=
