--- a/golang/cmd/dagent/.env.example
+++ b/golang/cmd/dagent/.env.example
@@ -31,9 +31,6 @@ TRAEFIK_ACME_MAIL=
 TRAEFIK_ENABLED=false
 TRAEFIK_LOG_LEVEL=
 TRAEFIK_TLS=false
-UPDATER_CONTAINER_NAME=dagent-updater
-UPDATE_HOST_TIMEZONE=true
-UPDATE_METHOD=off
-UPDATE_POLL_INTERVAL=600s
+DEFAULT_REGISTRY=index.docker.io
 WEBHOOK_TOKEN=
 SECRET_PRIVATE_KEY_FILE=/path/to/secret.key
