--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,3 +1,9 @@
+run:
+  timeout: 3m
+  skip-dirs:
+    - test/
+    - internal/cache
+
 linters-settings:
   depguard:
     list-type: blacklist
@@ -30,6 +36,8 @@ linters-settings:
       - octalLiteral
       - whyNoLint
       - wrapperFunc
+  gocognit:
+    min-complexity: 20
   gocyclo:
     min-complexity: 15
   goimports:
@@ -60,18 +68,30 @@ linters-settings:
     allow-unused: false # report any unused nolint directives
     require-explanation: false # don't require an explanation for nolint directives
     require-specific: false # don't require nolint directives to be specific about which linter is being skipped
+  tenv:
+    all: true
+  staticcheck:
+    go: "1.18"
+    checks:
+      - all
+
 
 linters:
   # please, do not use `enable-all`: it's deprecated and will be removed soon.
   # inverted configuration with `enable-all` and `disable` is not scalable during updates of golangci-lint
   disable-all: true
   enable:
+    - asciicheck
     - bodyclose
+    # todo(nandor-magyar): refactor golang code to comply
+    # - containedctx
     - deadcode
     - depguard
     - dogsled
+    - durationcheck
     - dupl
     - errcheck
+    - errname
     - exportloopref
     - exhaustive
     - funlen
@@ -79,45 +99,34 @@ linters:
     - goconst
     - gocritic
     - gocyclo
-    - gofmt
+    - gofumpt
     - goimports
     - gomnd
     - goprintffuncname
     - gosec
     - gosimple
     - govet
+    - importas
     - ineffassign
     - lll
     - misspell
     - nakedret
+    - nilerr
     - noctx
     - nolintlint
+    - revive
     - rowserrcheck
     - staticcheck
     - structcheck
     - stylecheck
+    - tenv
+    - thelper
     - typecheck
     - unconvert
     - unparam
     - unused
     - varcheck
     - whitespace
-
-  # don't enable:
-  # - asciicheck
-  # - scopelint
-  # - gochecknoglobals
-  # - gocognit
-  # - godot
-  # - godox
-  # - goerr113
-  # - interfacer
-  # - maligned
-  # - nestif
-  # - prealloc
-  # - testpackage
-  # - revive
-  # - wsl
 
 issues:
   # Excluding configuration per-path, per-linter, per-text and per-source
@@ -126,7 +135,4 @@ issues:
       linters:
         - gomnd
 
-run:
-  skip-dirs:
-    - test/
-    - internal/cache
+
