--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,8 @@
     "eslint.workingDirectories": [
         "web/crux",
         "web/crux-ui"
-    ]
+    ],
+    "gopls": {
+	    "formatting.gofumpt": true,
+    }
 }
