chore: dead code and linter updates (#333)

--- a/golang/cmd/dagent/.env.example
+++ b/golang/cmd/dagent/.env.example
@@ -8,11 +8,7 @@ DEFAULT_VOLUME_SIZE=1G
 # GRPC_TOKEN=jwt
 IMPORT_CONTAINER_IMAGE=rclone/rclone:1.57.0
 INGRESS_ROOT_DOMAIN=
-PORT=8080
 READ_HEADER_TIMEOUT=15s
-REGISTRY=index.docker.io
-REGISTRY_PASSWORD=
-REGISTRY_USERNAME=
 SECRET_PRIVATE_KEY_FILE=/path/to/secret.key
 DEBUG=true
 
@@ -35,9 +31,6 @@ TRAEFIK_ACME_MAIL=
 TRAEFIK_ENABLED=false
 TRAEFIK_LOG_LEVEL=
 TRAEFIK_TLS=false
-UPDATER_CONTAINER_NAME=dagent-updater
-UPDATE_HOST_TIMEZONE=true
-UPDATE_METHOD=off
-UPDATE_POLL_INTERVAL=600s
+DEFAULT_REGISTRY=index.docker.io
 WEBHOOK_TOKEN=
 SECRET_PRIVATE_KEY_FILE=/path/to/secret.key
