--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,14 +1,21 @@
+run:
+  timeout: 3m
+  skip-dirs:
+    - internal/cache
+
 linters-settings:
   depguard:
     list-type: blacklist
     packages:
-      # logging is allowed only by logutils.Log, logrus
-      # is allowed to use only in logutils package
-      - github.com/sirupsen/logrus
+      # logging is allowed zerolog only
+      # is allowed to use only package
+      - log
     packages-with-error-message:
-      - github.com/sirupsen/logrus: "logging is allowed only by logutils.Log"
+      - log: "logging is allowed only by github.com/rs/zerolog"
   dupl:
     threshold: 100
+  forbidigo:
+    exclude_godoc_examples: true
   funlen:
     lines: 100
     statements: 50
@@ -30,6 +37,8 @@ linters-settings:
       - octalLiteral
       - whyNoLint
       - wrapperFunc
+  gocognit:
+    min-complexity: 20
   gocyclo:
     min-complexity: 15
   goimports:
@@ -42,13 +51,6 @@ linters-settings:
      - return
   govet:
     check-shadowing: true
-    settings:
-      printf:
-        funcs:
-          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Infof
-          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Warnf
-          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Errorf
-          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Fatalf
   lll:
     line-length: 140
   maligned:
@@ -60,64 +62,63 @@ linters-settings:
     allow-unused: false # report any unused nolint directives
     require-explanation: false # don't require an explanation for nolint directives
     require-specific: false # don't require nolint directives to be specific about which linter is being skipped
+  tenv:
+    all: true
+  staticcheck:
+    go: "1.18"
+    checks:
+      - all
+
 
 linters:
   # please, do not use `enable-all`: it's deprecated and will be removed soon.
   # inverted configuration with `enable-all` and `disable` is not scalable during updates of golangci-lint
   disable-all: true
   enable:
+    - asciicheck
     - bodyclose
-    - deadcode
+    # todo(nandor-magyar): refactor golang code to comply
+    # - containedctx
     - depguard
     - dogsled
+    - durationcheck
     - dupl
     - errcheck
+    - errname
     - exportloopref
     - exhaustive
+    - forbidigo
     - funlen
     - gochecknoinits
     - goconst
     - gocritic
     - gocyclo
-    - gofmt
+    - gofumpt
     - goimports
     - gomnd
     - goprintffuncname
     - gosec
     - gosimple
     - govet
+    - importas
     - ineffassign
     - lll
     - misspell
     - nakedret
+    - nilerr
     - noctx
     - nolintlint
+    - revive
     - rowserrcheck
     - staticcheck
-    - structcheck
     - stylecheck
+    - tenv
+    - thelper
     - typecheck
     - unconvert
     - unparam
     - unused
-    - varcheck
     - whitespace
-
-  # don't enable:
-  # - asciicheck
-  # - scopelint
-  # - gochecknoglobals
-  # - gocognit
-  # - godot
-  # - godox
-  # - goerr113
-  # - interfacer
-  # - maligned
-  # - nestif
-  # - prealloc
-  # - testpackage
-  # - revive
-  # - wsl
 
 issues:
   # Excluding configuration per-path, per-linter, per-text and per-source
@@ -126,7 +127,4 @@ issues:
       linters:
         - gomnd
 
-run:
-  skip-dirs:
-    - test/
-    - internal/cache
+
