--- a/golang/cmd/crane/.env.example
+++ b/golang/cmd/crane/.env.example
@@ -8,13 +8,10 @@ DEFAULT_VOLUME_SIZE=1G
 # GRPC_TOKEN=
 IMPORT_CONTAINER_IMAGE=rclone/rclone:1.57.0
 INGRESS_ROOT_DOMAIN=
-PORT=8080
 READ_HEADER_TIMEOUT=15s
-REGISTRY=index.docker.io
-REGISTRY_PASSWORD=
-REGISTRY_USERNAME=
 SECRET_PRIVATE_KEY_FILE=/path/to/secret.key
 DEBUG=true
+DEFAULT_REGISTRY=index.docker.io
 
 # crane specific options
 CRANE_GEN_TCP_INGRESS_MAP=
