--- a/web/crux/package.json
+++ b/web/crux/package.json
@@ -17,7 +17,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "build:proto": "find proto -name '*.proto' -exec protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_opt=nestJs=true --ts_proto_opt=addNestjsRestParameter=true --ts_proto_opt=outputJsonMethods=true --ts_proto_opt=addGrpcMetadata=true --ts_proto_out=./src/proto/ {} \\;",
-    "format": "prettier --write \"src/**/*.ts\" \"prisma/seeds/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\"",
     "start": "nest start --debug --watch",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -33,12 +33,9 @@
     "ts-node": "ts-node --compiler-options { \"module\": \"CommonJS\"}",
     "database:up": "docker-compose -f docker-compose.database.yaml up -d",
     "database:down": "docker-compose -f docker-compose.database.yaml down",
-    "prismagen": "prisma generate",
-    "seed:microservice": "npx ts-node prisma/seeds/demo-seeder.ts",
-    "seed:mock": "npx ts-node prisma/seeds/seeder.ts"
+    "prismagen": "prisma generate"
   },
   "prisma": {
-    "seed": "ts-node prisma/seeds/seeder.ts",
     "schema": "prisma/schema.prisma"
   },
   "dependencies": {
