feat(crux): add Prometheus basics

--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -13,6 +13,7 @@ K8S_LOCAL_MANIFEST=false
 
 GRPC_AGENT_PORT=5000
 GRPC_API_PORT=5001
+HTTP_API_PORT=1848
 
 # Email service config
 SMTP_URI=smtps://test:test@localhost:1025/?skip_ssl_verify=true&legacy_ssl=true
