feat(agent): add service monitor spawning

--- a/golang/Makefile
+++ b/golang/Makefile
@@ -30,6 +30,8 @@ ifeq ($(GOOS),windows)
 	OUT_EXT=.exe
 endif
 
+GOFLAGS := GOOS=$(GOOS) GOARCH=$(GOARCH) CGO_ENABLED=0
+
 .PHONY: up
 up: ##
 	cd cmd/dyo && \
@@ -62,23 +64,25 @@ go-crane-init: ##
 go-dagent: ##
 	air --build.cmd "" --build.bin "cd cmd/dagent && go run ."
 
+.PHONY: compile
+compile: | compile-cli compile-crane compile-dagent
 
 .PHONY: compile-cli
 compile-cli: ##
 	cd cmd/dyo && \
-	GOOS=$(GOOS) GOARCH=$(GOARCH) CGO_ENABLED=0 go build ${LDFLAGS} -o ../../build/out/dyo${OUT_EXT}; \
+	$(GOFLAGS) go build ${LDFLAGS} -o ../../build/out/dyo${OUT_EXT}; \
 	cd -
 
 .PHONY: compile-crane
 compile-crane: ##
 	cd cmd/crane && \
-	GOOS=$(GOOS) GOARCH=$(GOARCH) CGO_ENABLED=0 go build ${LDFLAGS} -o ../../build/out/crane${OUT_EXT}; \
+	$(GOFLAGS) go build ${LDFLAGS} -o ../../build/out/crane${OUT_EXT}; \
 	cd -
 
 .PHONY: compile-dagent
 compile-dagent: ##
 	cd cmd/dagent && \
-	GOOS=$(GOOS) GOARCH=$(GOARCH) CGO_ENABLED=0 go build ${LDFLAGS} -o ../../build/out/dagent${OUT_EXT}; \
+	$(GOFLAGS) go build ${LDFLAGS} -o ../../build/out/dagent${OUT_EXT}; \
 	cd -
 
 .PHONY: install-go-tools
