--- a/web/crux/package.json
+++ b/web/crux/package.json
@@ -39,64 +39,64 @@
     "schema": "prisma/schema.prisma"
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.6.8",
-    "@grpc/proto-loader": "^0.7.0",
+    "@grpc/grpc-js": "^1.8.0",
+    "@grpc/proto-loader": "^0.7.3",
     "@nestjs-modules/mailer": "^1.8.1",
-    "@nestjs/axios": "^0.1.0",
-    "@nestjs/cli": "^9.0.0",
+    "@nestjs/axios": "^1.0.0",
+    "@nestjs/cli": "^9.1.5",
     "@nestjs/config": "^2.2.0",
     "@nestjs/jwt": "^9.0.0",
-    "@nestjs/microservices": "^9.0.8",
-    "@nestjs/platform-express": "^9.0.8",
+    "@nestjs/microservices": "^9.2.1",
+    "@nestjs/platform-express": "^9.2.1",
     "@ory/kratos-client": "^0.10.1",
-    "@prisma/client": "4.4.0",
+    "@prisma/client": "4.7.1",
     "@sendgrid/mail": "^7.7.0",
     "@types/google-protobuf": "^3.15.6",
     "@willsoto/nestjs-prometheus": "^4.7.0",
-    "axios": "^0.27.2",
+    "axios": "^1.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "dotenv": "^16.0.1",
-    "google-auth-library": "^8.1.1",
-    "google-protobuf": "^3.21.0",
+    "dotenv": "^16.0.3",
+    "google-auth-library": "^8.7.0",
+    "google-protobuf": "^3.21.2",
     "handlebars": "^4.7.7",
     "nodemailer": "^6.8.0",
-    "pg": "^8.7.3",
+    "pg": "^8.8.0",
     "prom-client": "^14.1.0",
-    "protobufjs": "^7.0.0",
+    "protobufjs": "^7.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.6",
+    "rxjs": "^7.6.0",
     "www-authenticate": "^0.6.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@nestjs/schematics": "^9.0.1",
-    "@nestjs/testing": "^9.0.8",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.6",
-    "@types/node": "^18.8.0",
+    "@nestjs/schematics": "^9.0.3",
+    "@nestjs/testing": "^9.2.1",
+    "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.11",
     "@types/nodemailer": "^6.4.6",
     "@types/supertest": "^2.0.12",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "eslint": "^8.2.0",
+    "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.45.1",
+    "@typescript-eslint/parser": "^5.45.1",
+    "eslint": "^8.29.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "jest": "^28.1.3",
-    "prettier": "^2.7.1",
-    "prisma": "4.4.0",
-    "ts-jest": "^28.0.7",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.3.1",
+    "prettier": "^2.8.0",
+    "prisma": "4.7.1",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "ts-proto": "1.125.0",
-    "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.7.4"
+    "ts-proto": "^1.135.0",
+    "tsconfig-paths": "^4.1.1",
+    "typescript": "^4.9.3"
   }
 }
