build: update ui deps

--- a/web/crux-ui/tsconfig.json
+++ b/web/crux-ui/tsconfig.json
@@ -29,7 +29,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "typeRoots": ["node_modules/yup"]
   },
   "exclude": [
     "node_modules"
