--- a/web/crux-ui/package.json
+++ b/web/crux-ui/package.json
@@ -28,65 +28,65 @@
     "install:x64": "npm install --target_arch=x64"
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.3.7",
-    "@grpc/proto-loader": "^0.6.5",
-    "@headlessui/react": "^1.4.1",
+    "@grpc/grpc-js": "^1.8.0",
+    "@grpc/proto-loader": "^0.7.3",
+    "@headlessui/react": "^1.7.4",
     "@ory/kratos-client": "^0.10.1",
-    "@tailwindcss/line-clamp": "^0.2.2",
-    "@types/ws": "^8.2.0",
-    "axios": "^0.27.2",
-    "clsx": "^1.1.1",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@types/ws": "^8.5.3",
+    "axios": "^1.2.1",
+    "clsx": "^1.2.1",
     "formik": "^2.2.9",
-    "google-auth-library": "^8.1.1",
-    "google-protobuf": "^3.15.8",
-    "next": "^12.2.4",
-    "next-translate": "1.6.0-canary.1",
-    "node-fetch": "^2.6.6",
-    "openpgp": "^5.4.0",
-    "prismjs": "^1.28.0",
-    "react": "^17.0.2",
+    "google-auth-library": "^8.7.0",
+    "google-protobuf": "^3.21.2",
+    "next": "^13.0.6",
+    "next-translate": "1.6.0",
+    "node-fetch": "^3.3.0",
+    "openpgp": "^5.5.0",
+    "prismjs": "^1.29.0",
+    "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
-    "react-hot-toast": "^2.1.1",
-    "react-simple-code-editor": "^0.11.2",
-    "swr": "^1.0.0",
-    "uuid": "^8.3.2",
-    "ws": "^6.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-simple-code-editor": "^0.13.1",
+    "swr": "^1.3.0",
+    "uuid": "^9.0.0",
+    "ws": "^8.11.0",
     "www-authenticate": "^0.6.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@playwright/test": "^1.26.0-alpha-aug-23-2022",
-    "@types/google-protobuf": "^3.15.5",
-    "@types/jsoneditor": "^9.5.1",
+    "@playwright/test": "^1.28.1",
+    "@types/google-protobuf": "^3.15.6",
+    "@types/jsoneditor": "^9.9.0",
     "@types/openpgp": "^4.4.18",
     "@types/prismjs": "^1.26.0",
-    "@types/react": "^17.0.15",
-    "@types/react-datepicker": "^4.4.2",
-    "@types/react-google-recaptcha": "^2.1.2",
-    "@types/uuid": "^8.3.4",
-    "@types/yup": "^0.29.13",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
-    "autoprefixer": "^10.4.4",
-    "eslint": "^8.2.0",
+    "@types/react": "^18.0.26",
+    "@types/react-datepicker": "^4.8.0",
+    "@types/react-google-recaptcha": "^2.1.5",
+    "@types/uuid": "^9.0.0",
+    "@types/yup": "^0.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.45.1",
+    "@typescript-eslint/parser": "^5.45.1",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.29.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-next": "12.0.10",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-config-next": "13.0.6",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "grpc_tools_node_protoc_ts": "^5.3.2",
-    "grpc-tools": "^1.11.2",
-    "postcss": "^8.4.12",
-    "prettier": "^2.5.1",
-    "prettier-plugin-organize-imports": "^2.3.4",
-    "tailwindcss": "^3.0.24",
-    "ts-proto": "1.125.0",
-    "typescript": "^4.3.5"
+    "grpc-tools": "^1.12.3",
+    "postcss": "^8.4.19",
+    "prettier": "^2.8.0",
+    "prettier-plugin-organize-imports": "^3.2.1",
+    "tailwindcss": "^3.2.4",
+    "ts-proto": "^1.135.0",
+    "typescript": "^4.9.3"
   }
 }
