--- a/.github/workflows/web-crux-ui.yml
+++ b/.github/workflows/web-crux-ui.yml
@@ -94,6 +94,7 @@ jobs:
           cd crux
           npm run start:prod &
           cd ../crux-ui
+          npx playwright install-deps
           npm i
           npm run disable-telemetry
           npm run build
