--- a/.github/workflows/web-crux-ui.yml
+++ b/.github/workflows/web-crux-ui.yml
@@ -56,7 +56,7 @@ jobs:
     runs-on: self-hosted
     needs: check
     container:
-      image: dyrectorio/playwright:1.26.0-alpha-aug-23-2022
+      image: dyrectorio/playwright:1.28.1
       volumes:
         - /var/run/docker.sock:/var/run/docker
       ports:
@@ -94,7 +94,6 @@ jobs:
           cd crux
           npm run start:prod &
           cd ../crux-ui
-          npx playwright install-deps
           npm i
           npm run disable-telemetry
           npm run build
