build(web): update kratos to v1.11

--- a/web/kratos/kratos.template.yaml
+++ b/web/kratos/kratos.template.yaml
@@ -20,7 +20,7 @@ selfservice:
 
   flows:
     error:
-      ui_url: ${CRUX_UI_URL}/auth/error
+      ui_url: ${CRUX_UI_URL}/error
 
     settings:
       ui_url: ${CRUX_UI_URL}/auth/settings
