refactor: use kratos recovery code instead of link

--- a/web/kratos/kratos.template.yaml
+++ b/web/kratos/kratos.template.yaml
@@ -17,6 +17,8 @@ selfservice:
       enabled: true
     oidc:
       enabled: false
+    code:
+      enabled: true
 
   flows:
     error:
@@ -29,12 +31,12 @@ selfservice:
     recovery:
       enabled: true
       ui_url: ${CRUX_UI_URL}/auth/recovery
-      after:
-        default_browser_return_url: ${CRUX_UI_URL}
+      use: code
 
     verification:
       enabled: true
       ui_url: ${CRUX_UI_URL}/auth/verify
+      use: code
       after:
         default_browser_return_url: ${CRUX_UI_URL}
 
