refactor(web): update kratos to v1.11 (#401)

--- a/web/kratos/kratos.template.yaml
+++ b/web/kratos/kratos.template.yaml
@@ -17,10 +17,12 @@ selfservice:
       enabled: true
     oidc:
       enabled: false
+    code:
+      enabled: true
 
   flows:
     error:
-      ui_url: ${CRUX_UI_URL}/auth/error
+      ui_url: ${CRUX_UI_URL}/error
 
     settings:
       ui_url: ${CRUX_UI_URL}/auth/settings
@@ -29,12 +31,12 @@ selfservice:
     recovery:
       enabled: true
       ui_url: ${CRUX_UI_URL}/auth/recovery
-      after:
-        default_browser_return_url: ${CRUX_UI_URL}
+      use: code
 
     verification:
       enabled: true
       ui_url: ${CRUX_UI_URL}/auth/verify
+      use: code
       after:
         default_browser_return_url: ${CRUX_UI_URL}
 
