--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/setup-node@v2
       - name: Run validation
         # if it's not a PR we skip
-        if: github.github_base_ref != ''
+        if: ${{ github.event_name == 'pull_request' }}
         uses: beemojs/conventional-pr-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
